<resources>
    <string name="app_name">MainKODE</string>
    <string name="search_hint">Введи имя, тег, почту...</string>


    <string name="all">Все</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="design">Дизайн</string>
    <string name="management">Менеджмент</string>
    <string name="qa">QA</string>
    <string name="back_office">Бэк-офис</string>
    <string name="frontend">Frontend</string>
    <string name="hr">HR</string>
    <string name="pr">PR</string>
    <string name="backend">Backend</string>
    <string name="support">Техподдержка</string>
    <string name="analytics">Аналитика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_genius_break_all">Какой-то сверхразум все сломал</string>
    <string name="cancel">Отмена</string>
    <string name="we_do_not_find_anyone">Мы никого не нашли</string>
    <string name="try_use_another_query">Попробуй скорректировать запрос</string>
    <string name="by_dob">По дню рождению</string>
    <string name="by_alphabet">По алфавиту</string>
    <string name="sort">Сортировка</string>

    <string name="year1">лет</string>
    <string name="year2">год</string>
    <string name="year3">года</string>

</resources>